# Genshin-Pizza-Helper

./: .gitignore  .swiftformat  .swiftlint.yml  README.md
AccountIntent/: AccountIntent.entitlements  Info.plist  IntentHandler.swift
CommonTools/: AppConfig.swift  ArrayOfStringRawPresentable.swift  AutoSheetDismiss.swift  ChineseUIAccommodations.swift  CollectionChunked.swift  Color.swift  DateRelationIdentifier.swift  DeviceRecognizer.swift  GlobalVar.swift  NetworkReachability.swift  NumberTools.swift  PropertyDictionary.swift  ReviewHandler.swift  StoreManager.swift  StringExtensions.swift  StringLocalized.swift  SwiftUIExtensions.swift  TapticSupport.swift  ThisDevice.swift  TimeTools.swift  ViewTools.swift  md5.swift
Dependences/gacha_crawler/: .gitignore  Cargo.toml  build-package.sh  build-rust-release.sh  build-rust.sh  package-release.sh  package.sh
Dependences/gacha_crawler/src/: lib.rs
Dependences/gacha_crawler/src/server/: handler.rs  mod.rs  proxy_server.rs
Dependences/gacha_crawler/src/server/ca/: PizzaCA.key  PizzaCA.pem
GachaMIMT/: GachaMIMT.entitlements  PacketTunnelProvider.swift
GenshinPizzaHelper.xcodeproj/: project.pbxproj
GenshinPizzaHepler/: AppDelegate.swift  GenshinPizzaHepler.entitlements  GenshinPizzaHeplerApp.swift  Info.plist
Model/: Account.swift  AccountConfigurationModel.swift  BackgroundOptions.swift  DisplayContentModel.swift  ENCharacterLocModel.swift  ENCharacterMapModel.swift  GDDictionaryDataModel.swift  MaterialChoices.swift  MaterialProviders.swift  MultiTokenResult.swift  PlayerDetailsModel.swift  Servers.swift  (+2 more)
(+2484 files in other folders)
